# lsdup

./: CMakeLists.txt  README.md  vcpkg.json
cmake/: dependencies.cmake
src/: CMakeLists.txt  dir_lookup.h  hasher.h  main.cpp
tests/: CMakeLists.txt  dir_lookup.tests.cpp  hasher.tests.cpp
tests/input/: test-hash.txt.copy  test-hash.txt.different
